--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<div class="text-center">
-			<img src="BEYJAY.png">
+			<img src="BEYJAY.png" class="img-responsive" alt="Responsive image">
 		</div>
 		<div class="text-center">
 			<h1><strong>Die in Love and Live Forever</strong></h1>
@@ -21,7 +21,7 @@
 				<h2>
 					<p class="text-left">Tour Dates</p>
 				</h2>
-			<table class="table table-striped table-condensed">
+			<table class="table-responsive table-striped table-condensed">
 		      <tr>
 		        <th>Date</th>
 		        <th>City</th>
@@ -56,7 +56,7 @@
 	    		<h2>
 					<p class="text-left">Set List</p>
 				</h2> 
-			<table class="table table-striped table-condensed">
+			<table class="table-responsive table-striped table-condensed">
 		      <tr>
 		        <td>Bonnie & Clyde</td>
 		      </tr>
