--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
 	<div class="container">
-		<div class="text-center">
+		<div class="page-header">
+			<center>
 			<img src="BEYJAY.png" class="img-responsive" alt="Responsive image">
+			<h1><strong>Die in Love and Live Forever</strong></h1>	
+			</center>
 		</div>
-		<div class="text-center">
-			<h1><strong>Die in Love and Live Forever</strong></h1>
-		</div>	
+	</div>
 	<div class="row">
 		<div class="col-md-8">
-				<h2>
-					<p class="text-left">Tour Dates</p>
-				</h2>
+			<h2>
+				<p class="text-left">Tour Dates</p>
+			</h2>
 			<table class="table-responsive table-striped table-condensed">
 		      <tr>
 		        <th>Date</th>
@@ -53,9 +54,9 @@
 		    </table>
 		</div>
 	    <div class="col-md-4">
-	    		<h2>
-					<p class="text-left">Set List</p>
-				</h2> 
+	    	<h2>
+				<p class="text-left">Set List</p>
+			</h2> 
 			<table class="table-responsive table-striped table-condensed">
 		      <tr>
 		        <td>Bonnie & Clyde</td>
