--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h2>
 				<p class="text-left">Tour Dates</p>
 			</h2>
-			<table class="table-responsive table-striped table-condensed">
+			<table class="table table-striped table-condensed">
 		      <tr>
 		        <th>Date</th>
 		        <th>City</th>
@@ -57,7 +57,7 @@
 	    	<h2>
 				<p class="text-left">Set List</p>
 			</h2> 
-			<table class="table-responsive table-striped table-condensed">
+			<table class="table table-striped table-condensed">
 		      <tr>
 		        <td>Bonnie & Clyde</td>
 		      </tr>
